--- a/src/app/assets/sass/app.scss
+++ b/src/app/assets/sass/app.scss
@@ -30,6 +30,8 @@
 @use "object/component/radio";
 @use "object/component/selectbox";
 @use "object/component/sidesubmenu";
+@use "object/component/tables";
+@use "object/component/tooltip";
 
 
 //*
