--- a/src/app/assets/sass/app.scss
+++ b/src/app/assets/sass/app.scss
@@ -32,7 +32,7 @@
 @use "object/component/sidesubmenu";
 @use "object/component/tables";
 @use "object/component/tooltip";
-
+@use "object/component/drag";
 
 //*
 //  object__project
