--- a/src/app/assets/sass/foundation/_variables.scss
+++ b/src/app/assets/sass/foundation/_variables.scss
@@ -24,7 +24,8 @@
     --color-white: #FFF;
     --color-lightgblue: #1d4c94;
     --color-clearblue: #a4c2f3;
-    
+    --color-clearlightblue: #eafffd;
+
     // error
     --color-error: #dc3545;
 
